--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <header id="header">
         <div class="container">
-            <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
+            <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
                 <a class="navbar-brand" href="#">Navbar</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -57,7 +57,12 @@
     <main id="main">
         <div class="container">
             <div class="row">
-                <div class="col-12">
+                <div class="col-3">
+                    <aside>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean condimentum leo dolor, finibus eleifend odio aliquam et. Aenean eget vulputate est, nec rhoncus metus. Sed accumsan sit amet odio eu suscipit. Aenean tincidunt maximus tellus eu posuere. Donec sem purus, lacinia quis ligula eu, fringilla malesuada turpis. Curabitur convallis enim condimentum nulla tempor, id lacinia risus tincidunt. Curabitur ullamcorper tincidunt neque vel sollicitudin.</p>
+                    </aside>
+                </div>
+                <div class="col-9">
 
                     <h1>blank bootstrap template</h1>
 
@@ -78,7 +83,35 @@
     </main>
 
     <footer id="footer">
-
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    footer
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-4">
+                    <ul class="nav flex-column">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">Active</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Link</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Link</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                        </li>
+                    </ul>                    
+                </div>
+                <div class="col-4"></div>
+                <div class="col-4">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean condimentum leo dolor, finibus eleifend odio aliquam et. Aenean eget vulputate est, nec rhoncus metus. Sed accumsan sit amet odio eu suscipit. Aenean tincidunt maximus tellus eu posuere. Donec sem purus, lacinia quis ligula eu, fringilla malesuada turpis. Curabitur convallis enim condimentum nulla tempor, id lacinia risus tincidunt. Curabitur ullamcorper tincidunt neque vel sollicitudin.</p>
+                </div>
+            </div>
+        </div>
     </footer>
 
     <script src="libs/jquery-3.3.1.min.js"></script>
