--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="libs/js-offcanvas/js-offcanvas.css">
+    <link rel="stylesheet" href="libs/slick/slick.css">
+    <link rel="stylesheet" href="libs/slick/slick-theme.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 
@@ -20,7 +22,7 @@
 
             <div class="container">
 
-                <a href="#offCanvas" id="triggerButton" class="btn btn-primary m-2 d-lg-none">Menu</a>
+                <a href="#offCanvas" id="triggerButton" class="btn btn-primary my-2 d-lg-none">Menu</a>
 
                 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                     <a class="navbar-brand" href="#">Navbar</a>
@@ -57,6 +59,13 @@
                         </form>
                     </div>
                 </nav>
+
+                <div class="main-slider">
+                    <div><img class="img-fluid" src="https://via.placeholder.com/1110x400" alt=""></div>
+                    <div><img class="img-fluid" src="https://via.placeholder.com/1110x400" alt=""></div>
+                    <div><img class="img-fluid" src="https://via.placeholder.com/1110x400" alt=""></div>
+                </div>
+
             </div>
 
         </header>
@@ -122,18 +131,35 @@
                             eu, ullamcorper sodales ante. Etiam consectetur sodales nunc, et scelerisque risus.</p>
 
                     </div>
+
+                    <div class="col-12">
+                        <div class="responsive-slider">
+                            <div><img class="img-fluid" src="https://via.placeholder.com/300x200" alt=""></div>
+                            <div><img class="img-fluid" src="https://via.placeholder.com/300x200" alt=""></div>
+                            <div><img class="img-fluid" src="https://via.placeholder.com/300x200" alt=""></div>
+                            <div><img class="img-fluid" src="https://via.placeholder.com/300x200" alt=""></div>
+                            <div><img class="img-fluid" src="https://via.placeholder.com/300x200" alt=""></div>
+                            <div><img class="img-fluid" src="https://via.placeholder.com/300x200" alt=""></div>
+                            <div><img class="img-fluid" src="https://via.placeholder.com/300x200" alt=""></div>
+                            <div><img class="img-fluid" src="https://via.placeholder.com/300x200" alt=""></div>
+                            <div><img class="img-fluid" src="https://via.placeholder.com/300x200" alt=""></div>
+                            <div><img class="img-fluid" src="https://via.placeholder.com/300x200" alt=""></div>
+                            <div><img class="img-fluid" src="https://via.placeholder.com/300x200" alt=""></div>
+                            <div><img class="img-fluid" src="https://via.placeholder.com/300x200" alt=""></div>
+                        </div>
+                    </div>
+                    
+
                 </div>
+
             </div>
+
+
 
         </main>
 
         <footer id="footer">
             <div class="container">
-                <div class="row">
-                    <div class="col-12">
-                        footer
-                    </div>
-                </div>
                 <div class="row">
                     <div class="col-12 col-lg-4">
                         <ul class="nav flex-column">
@@ -175,24 +201,30 @@
                             tincidunt. Curabitur ullamcorper tincidunt neque vel sollicitudin.</p>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-12">
+                        <p class="text-center">Bs tpl &COPY; Serge</p>
+                    </div>
+                </div>                
             </div>
         </footer>
 
-    </div>
-    <!--end c-offcanvas-content-wrap-->
+    </div><!--end c-offcanvas-content-wrap-->
 
     <aside id="offCanvas">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean condimentum leo dolor, finibus eleifend odio aliquam
-            et. Aenean eget vulputate est, nec rhoncus metus. Sed accumsan sit amet odio eu suscipit. Aenean tincidunt maximus
-            tellus eu posuere. Donec sem purus, lacinia quis ligula eu, fringilla malesuada turpis. Curabitur convallis enim
-            condimentum nulla tempor, id lacinia risus tincidunt. Curabitur ullamcorper tincidunt neque vel sollicitudin.</p>
-        </p>
+        <nav class="nav flex-column">
+            <a class="nav-link active" href="#">Active</a>
+            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        </nav>
     </aside>
 
     <script src="libs/jquery-3.3.1.min.js"></script>
     <script src="libs/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="libs/js-offcanvas/js-offcanvas.pkgd.min.js"></script>
+    <script src="libs/slick/slick.min.js"></script>
     <script src="js/scripts.js"></script>
 
 </body>
